Update Elective options to a dropdown selection

--- a/terp/Student/New.html
+++ b/terp/Student/New.html
@@ -356,74 +356,21 @@
                         <div class="col-md-6 mb-3">
                             <fieldset class="subject-group">
                                 <legend>Elective Options 1</legend>
-                                <div class="d-flex flex-column gap-2">
-                                    <!-- Subjects Loop 1 -->
-                                    <div class="form-check">
-                                        <input id="SubjectGroups_0__Subjects_0__SubjectCode" name="SubjectGroups[0].Subjects[0].SubjectCode" type="hidden" value="003">
-                                        <input class="form-check-input" id="SubjectGroups_0__Subjects_0__IsSelected" name="SubjectGroups[0].Subjects[0].IsSelected" type="checkbox" value="true">
-                                        <input name="SubjectGroups[0].Subjects[0].IsSelected" type="hidden" value="false">
-                                        <label class="form-check-label" for="SubjectGroups_0__Subjects_0__IsSelected">DANGME</label>
-                                    </div>
-                                    <div class="form-check">
-                                        <input id="SubjectGroups_0__Subjects_1__SubjectCode" name="SubjectGroups[0].Subjects[1].SubjectCode" type="hidden" value="004">
-                                        <input class="form-check-input" id="SubjectGroups_0__Subjects_1__IsSelected" name="SubjectGroups[0].Subjects[1].IsSelected" type="checkbox" value="true">
-                                        <input name="SubjectGroups[0].Subjects[1].IsSelected" type="hidden" value="false">
-                                        <label class="form-check-label" for="SubjectGroups_0__Subjects_1__IsSelected">DAGAARE</label>
-                                    </div>
-                                    <div class="form-check">
-                                        <input id="SubjectGroups_0__Subjects_2__SubjectCode" name="SubjectGroups[0].Subjects[2].SubjectCode" type="hidden" value="005">
-                                        <input class="form-check-input" id="SubjectGroups_0__Subjects_2__IsSelected" name="SubjectGroups[0].Subjects[2].IsSelected" type="checkbox" value="true">
-                                        <input name="SubjectGroups[0].Subjects[2].IsSelected" type="hidden" value="false">
-                                        <label class="form-check-label" for="SubjectGroups_0__Subjects_2__IsSelected">DAGBANI</label>
-                                    </div>
-                                    <div class="form-check">
-                                        <input id="SubjectGroups_0__Subjects_3__SubjectCode" name="SubjectGroups[0].Subjects[3].SubjectCode" type="hidden" value="006">
-                                        <input class="form-check-input" id="SubjectGroups_0__Subjects_3__IsSelected" name="SubjectGroups[0].Subjects[3].IsSelected" type="checkbox" value="true">
-                                        <input name="SubjectGroups[0].Subjects[3].IsSelected" type="hidden" value="false">
-                                        <label class="form-check-label" for="SubjectGroups_0__Subjects_3__IsSelected">EWE</label>
-                                    </div>
-                                    <div class="form-check">
-                                        <input id="SubjectGroups_0__Subjects_4__SubjectCode" name="SubjectGroups[0].Subjects[4].SubjectCode" type="hidden" value="007">
-                                        <input class="form-check-input" id="SubjectGroups_0__Subjects_4__IsSelected" name="SubjectGroups[0].Subjects[4].IsSelected" type="checkbox" value="true">
-                                        <input name="SubjectGroups[0].Subjects[4].IsSelected" type="hidden" value="false">
-                                        <label class="form-check-label" for="SubjectGroups_0__Subjects_4__IsSelected">FANTE</label>
-                                    </div>
-                                    <div class="form-check">
-                                        <input id="SubjectGroups_0__Subjects_5__SubjectCode" name="SubjectGroups[0].Subjects[5].SubjectCode" type="hidden" value="008">
-                                        <input class="form-check-input" id="SubjectGroups_0__Subjects_5__IsSelected" name="SubjectGroups[0].Subjects[5].IsSelected" type="checkbox" value="true">
-                                        <input name="SubjectGroups[0].Subjects[5].IsSelected" type="hidden" value="false">
-                                        <label class="form-check-label" for="SubjectGroups_0__Subjects_5__IsSelected">GA</label>
-                                    </div>
-                                    <div class="form-check">
-                                        <input id="SubjectGroups_0__Subjects_6__SubjectCode" name="SubjectGroups[0].Subjects[6].SubjectCode" type="hidden" value="009">
-                                        <input class="form-check-input" id="SubjectGroups_0__Subjects_6__IsSelected" name="SubjectGroups[0].Subjects[6].IsSelected" type="checkbox" value="true">
-                                        <input name="SubjectGroups[0].Subjects[6].IsSelected" type="hidden" value="false">
-                                        <label class="form-check-label" for="SubjectGroups_0__Subjects_6__IsSelected">GONJA</label>
-                                    </div>
-                                    <div class="form-check">
-                                        <input id="SubjectGroups_0__Subjects_7__SubjectCode" name="SubjectGroups[0].Subjects[7].SubjectCode" type="hidden" value="010">
-                                        <input class="form-check-input" id="SubjectGroups_0__Subjects_7__IsSelected" name="SubjectGroups[0].Subjects[7].IsSelected" type="checkbox" value="true">
-                                        <input name="SubjectGroups[0].Subjects[7].IsSelected" type="hidden" value="false">
-                                        <label class="form-check-label" for="SubjectGroups_0__Subjects_7__IsSelected">KASEM</label>
-                                    </div>
-                                    <div class="form-check">
-                                        <input id="SubjectGroups_0__Subjects_8__SubjectCode" name="SubjectGroups[0].Subjects[8].SubjectCode" type="hidden" value="011">
-                                        <input class="form-check-input" id="SubjectGroups_0__Subjects_8__IsSelected" name="SubjectGroups[0].Subjects[8].IsSelected" type="checkbox" value="true">
-                                        <input name="SubjectGroups[0].Subjects[8].IsSelected" type="hidden" value="false">
-                                        <label class="form-check-label" for="SubjectGroups_0__Subjects_8__IsSelected">NZEMA</label>
-                                    </div>
-                                    <div class="form-check">
-                                        <input id="SubjectGroups_0__Subjects_9__SubjectCode" name="SubjectGroups[0].Subjects[9].SubjectCode" type="hidden" value="012">
-                                        <input class="form-check-input" id="SubjectGroups_0__Subjects_9__IsSelected" name="SubjectGroups[0].Subjects[9].IsSelected" type="checkbox" value="true">
-                                        <input name="SubjectGroups[0].Subjects[9].IsSelected" type="hidden" value="false">
-                                        <label class="form-check-label" for="SubjectGroups_0__Subjects_9__IsSelected">AKUAPEM TWI</label>
-                                    </div>
-                                    <div class="form-check">
-                                        <input id="SubjectGroups_0__Subjects_10__SubjectCode" name="SubjectGroups[0].Subjects[10].SubjectCode" type="hidden" value="013">
-                                        <input class="form-check-input" id="SubjectGroups_0__Subjects_10__IsSelected" name="SubjectGroups[0].Subjects[10].IsSelected" type="checkbox" value="true">
-                                        <input name="SubjectGroups[0].Subjects[10].IsSelected" type="hidden" value="false">
-                                        <label class="form-check-label" for="SubjectGroups_0__Subjects_10__IsSelected">ASANTE TWI</label>
-                                    </div>
+                                <div class="mb-2">
+                                    <select class="form-select" id="ElectiveOptions1" name="ElectiveOptions1">
+                                        <option value="">-- Select Elective --</option>
+                                        <option value="003">DANGME</option>
+                                        <option value="004">DAGAARE</option>
+                                        <option value="005">DAGBANI</option>
+                                        <option value="006">EWE</option>
+                                        <option value="007">FANTE</option>
+                                        <option value="008">GA</option>
+                                        <option value="009">GONJA</option>
+                                        <option value="010">KASEM</option>
+                                        <option value="011">NZEMA</option>
+                                        <option value="012">AKUAPEM TWI</option>
+                                        <option value="013">ASANTE TWI</option>
+                                    </select>
                                 </div>
                             </fieldset>
                         </div>
@@ -562,6 +509,17 @@
                         }
 
                         // Populate Subjects
+                        // Dropdown for Elective Options 1
+                        const elective1Select = document.getElementById('ElectiveOptions1');
+                        if (elective1Select) {
+                            Array.from(elective1Select.options).forEach(option => {
+                                if (currentStudent.subjects.includes(option.textContent.trim())) {
+                                    elective1Select.value = option.value;
+                                }
+                            });
+                        }
+
+                        // Checkboxes for others (Elective Options 2)
                         const allCheckboxes = document.querySelectorAll('input[type="checkbox"][name*="IsSelected"]');
                         allCheckboxes.forEach(cb => {
                             const label = document.querySelector(`label[for="${cb.id}"]`);
@@ -592,6 +550,14 @@
             };
 
             // Capture Selected Subjects
+            // From Dropdown (Elective Options 1)
+            const elective1Select = document.getElementById('ElectiveOptions1');
+            if (elective1Select && elective1Select.value) {
+                const selectedText = elective1Select.options[elective1Select.selectedIndex].text;
+                studentData.subjects.push(selectedText);
+            }
+
+            // From Checkboxes (Elective Options 2)
             const checkboxes = document.querySelectorAll('input[type="checkbox"][name*="IsSelected"]:checked');
             checkboxes.forEach(cb => {
                 const label = document.querySelector(`label[for="${cb.id}"]`);
